--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,10 @@ jobs:
   run-script:
     runs-on: ubuntu-latest
     steps:
+      - name: clone repo locally
+        uses: actions/checkout@v4
+        
+
       - name: Install Cloudflared
         run: |       
           # Add cloudflare gpg key
