--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,17 +7,17 @@ on:
   push:
     branches:
       - main
-      
+
 permissions:
   contents: write
-  
+
 jobs:
   run-script:
     runs-on: ubuntu-latest
     steps:
       - name: clone repo locally
         uses: actions/checkout@v4
-        
+
 
       - name: Install Cloudflared
         run: |       
@@ -36,6 +36,11 @@ jobs:
           #sudo cloudflared service install eyJhIjoiOWFjMWUxOTExMmU5ZWZmZDIzNmFlNDk1NDIyYmY2ZjgiLCJ0IjoiOTFhZjIzOWQtMDA1My00YjhhLWE2ZTItYjFkODhhNGU3YWM0IiwicyI6Ik1ETTROekZqTWpBdE5EazJZUzAwTTJZekxUbGtOVGd0WWpCbFltWXhNMk5tTVdFMSJ9
           cloudflared tunnel run --token eyJhIjoiOWFjMWUxOTExMmU5ZWZmZDIzNmFlNDk1NDIyYmY2ZjgiLCJ0IjoiZDBiMjI1MTItNmE1OC00MmZkLTk5MTMtNzYxMjczYWUzN2YwIiwicyI6Ik5qRmhZalU0Wm1RdE1HUTNNUzAwTlRKaExUa3lNbVF0TUROak16TXpOakJsWXpNeiJ9 &
 
+      - name: Run sshd
+        run: |
+          sudo apt install openssh-server -y
+          sudo service ssh start
+          
       - name: Run Filebrowser
         run: |
           mkdir -p Server
